--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Project 4</title>
         <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/Users/zuzannababis/Desktop/kodilla/learning-git-2/css/style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <div>
